[gd_scene load_steps=14 format=2]

[ext_resource path="res://Game/script/Game.gd" type="Script" id=1]
[ext_resource path="res://Campo/scenas/tile_3.tres" type="TileSet" id=2]
[ext_resource path="res://Campo/script/Campo.gd" type="Script" id=3]
[ext_resource path="res://Game/script/Turno.gd" type="Script" id=4]
[ext_resource path="res://Game/script/Player.gd" type="Script" id=5]
[ext_resource path="res://Game/script/AI.gd" type="Script" id=6]
[ext_resource path="res://Game/script/Astar.gd" type="Script" id=7]
[ext_resource path="res://Campo/script/Linhas.gd" type="Script" id=8]
[ext_resource path="res://Game/imagens/bola.png" type="Texture" id=9]
[ext_resource path="res://Game/script/Bola.gd" type="Script" id=10]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 28.6753, 14.934 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 28.7763, 13.1951 )

[sub_resource type="CircleShape2D" id=3]

custom_solver_bias = 0.0
radius = 15.9254

[node name="Game" type="Node" index="0"]

script = ExtResource( 1 )

[node name="Campo" type="TileMap" parent="." index="0"]

mode = 0
tile_set = ExtResource( 2 )
cell_size = Vector2( 48, 48 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 1
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray( 0, 1, 0, 1, 1, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 1, 0, 6, 1, 0, 65536, 0, 0, 65537, 0, 0, 65538, 0, 0, 65539, 0, 0, 65540, 0, 0, 65541, 0, 0, 65542, 0, 0, 131072, 0, 0, 131073, 0, 0, 131074, 0, 0, 131075, 0, 0, 131076, 0, 0, 131077, 0, 0, 131078, 0, 0, 196608, 0, 0, 196609, 0, 0, 196610, 0, 0, 196611, 0, 0, 196612, 0, 0, 196613, 0, 0, 196614, 0, 0, 262144, 0, 0, 262145, 0, 0, 262146, 0, 0, 262147, 0, 0, 262148, 0, 0, 262149, 0, 0, 262150, 0, 0, 327680, 0, 0, 327681, 0, 0, 327682, 0, 0, 327683, 0, 0, 327684, 0, 0, 327685, 0, 0, 327686, 0, 0, 393216, 0, 0, 393217, 0, 0, 393218, 0, 0, 393219, 0, 0, 393220, 0, 0, 393221, 0, 0, 393222, 0, 0, 458752, 0, 0, 458753, 0, 0, 458754, 0, 0, 458755, 0, 0, 458756, 0, 0, 458757, 0, 0, 458758, 0, 0, 524288, 0, 0, 524289, 0, 0, 524290, 0, 0, 524291, 0, 0, 524292, 0, 0, 524293, 0, 0, 524294, 0, 0, 589824, 0, 0, 589825, 0, 0, 589826, 0, 0, 589827, 0, 0, 589828, 0, 0, 589829, 0, 0, 589830, 0, 0, 655360, 0, 0, 655361, 0, 0, 655362, 0, 0, 655363, 0, 0, 655364, 0, 0, 655365, 0, 0, 655366, 0, 0, 720896, 0, 0, 720897, 0, 0, 720898, 0, 0, 720899, 0, 0, 720900, 0, 0, 720901, 0, 0, 720902, 0, 0, 786432, 1, 0, 786433, 1, 0, 786434, 0, 0, 786435, 0, 0, 786436, 0, 0, 786437, 1, 0, 786438, 1, 0 )
script = ExtResource( 3 )
_sections_unfolded = [ "Cell", "Transform", "Visibility" ]

[node name="Turno" type="Node" parent="." index="1"]

script = ExtResource( 4 )

[node name="Player" type="Node2D" parent="Turno" index="0"]

script = ExtResource( 5 )

[node name="AI" type="Node2D" parent="Turno" index="1"]

script = ExtResource( 6 )

[node name="Astar" type="Node" parent="." index="2"]

script = ExtResource( 7 )

[node name="Linhas" type="Node2D" parent="." index="3"]

script = ExtResource( 8 )

[node name="Gol" type="Area2D" parent="." index="4" groups=[
"Gol",
]]

editor/display_folded = true
position = Vector2( 167.871, 23.5741 )
scale = Vector2( 2.24957, 0.399362 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Gol" index="0"]

shape = SubResource( 1 )

[node name="Gol2" type="Area2D" parent="." index="5" groups=[
"Gol",
]]

editor/display_folded = true
position = Vector2( 168.169, 600.26 )
scale = Vector2( 2.24957, 0.399362 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Gol2" index="0"]

shape = SubResource( 2 )

[node name="Bola" type="Sprite" parent="." index="6"]

texture = ExtResource( 9 )
script = ExtResource( 10 )

[node name="Area2D" type="Area2D" parent="Bola" index="0"]

position = Vector2( -4.76837e-007, -4.76837e-007 )
scale = Vector2( 0.5, 0.5 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bola/Area2D" index="0"]

shape = SubResource( 3 )

[node name="CanvasLayer" type="CanvasLayer" parent="." index="7"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )

[node name="GUI" type="Control" parent="CanvasLayer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 336.0
margin_bottom = 624.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="AI" type="Label" parent="CanvasLayer/GUI" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 96.0
margin_bottom = 48.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "AI"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors" ]

[node name="AI_Placar" type="Label" parent="CanvasLayer/GUI" index="1"]

anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_left = -96.0
margin_bottom = 48.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Player" type="Label" parent="CanvasLayer/GUI" index="2"]

anchor_left = 0.0
anchor_top = 1.0
anchor_right = 0.0
anchor_bottom = 1.0
margin_top = -47.0
margin_right = 96.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "PLAYER"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Player_Placar" type="Label" parent="CanvasLayer/GUI" index="3"]

anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -96.0
margin_top = -47.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[connection signal="area_entered" from="Bola/Area2D" to="." method="_on_Area2D_area_entered"]


